CHANGES IN VERSION 2.7.7
------------------------
 o add seed = FALSE to control reproduciblility of gsea function.
   to make result reproducible, explicitly set seed=TRUE <2015-06-04, Thu>
    - contributed by Vlad, see https://github.com/GuangchuangYu/DOSE/pull/5/
    - modified by Guangchuang
   
CHANGES IN VERSION 2.7.6
------------------------
 o bug fixed in cnetplot legend contributed by Vladislav Petyuk <2015-05-28, Thu>
 
CHANGES IN VERSION 2.7.5
------------------------
 o update vignette <2015-05-15, Fri>

CHANGES IN VERSION 2.7.4
------------------------
 o update permutation test with pvalue = (K+1)/(N+1) instead of K/N, 
   so that p value will never be 0 <2015-05-12, Tue>

CHANGES IN VERSION 2.7.3
------------------------
 o add setType slot in gseaResult <2015-05-15, Tue>
 o add universe and geneSets slots in enrichResult <2015-05-05, Tue>
 
CHANGES IN VERSION 2.7.2
------------------------
 o add vertex.label.font parameter in enrichMap <2015-04-27, Mon>

CHANGES IN VERSION 2.7.1
------------------------
 o update NCG description in enrichNCG <2015-04-22, Wed>

CHANGES IN VERSION 2.5.12
------------------------
 o report NA in qvalue column when it fail to calculate instead of throw error <2015-03-09, Thu>
 o update IC data <2015-03-08, Wed> 
 
CHANGES IN VERSION 2.5.11
------------------------
 o implement clusterSim and mclusterSim <2015-03-07, Tue>
 
CHANGES IN VERSION 2.5.10
------------------------
 o implement enrichNCG and now gseAnalyzer accept setType = "NCG" <2015-04-01, Wed>
   see http://ncg.kcl.ac.uk
 o change use_internal_data parameter to ... in all S3 generics and methods <2015-04-01, Wed>
 
CHANGES IN VERSION 2.5.9
------------------------
 o extend gseAnalyzer to support use_internal_data parameter <2015-03-29, Sun>
 
CHANGES IN VERSION 2.5.8
------------------------
 o keep order of barplot, sorted by pvalue by defalt <2015-02-11, Wed>

CHANGES IN VERSION 2.5.7
------------------------
 o fixed typo in vignette <2015-02-10, Tue>